# Dephted

./: .gitignore  README.md  package-lock.json
.github/workflows/: evals.yml  keepalive.yml
client/: .gitignore  data.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
client/src/: proxy.ts
client/src/app/: globals.css  layout.tsx
client/src/app/(app)/: layout.tsx
client/src/app/(app)/dashboard/: page.tsx
client/src/app/(app)/history/: page.tsx
client/src/app/(auth)/: layout.tsx
client/src/app/auth/callback/: route.ts
client/src/components/: providers.tsx
client/src/components/auth/: signup-form.tsx
client/src/components/dashboard/: dashboard-grid.tsx  topic-grid-client.tsx
client/src/components/layout/: nav-user.tsx
client/src/components/lesson/: lesson-page.tsx  step-check.tsx  step-feedback.tsx  step-problem.tsx  step-theory.tsx
client/src/components/shared/: brand-mark.tsx  prose.tsx  status-badge.tsx  streaming-cursor.tsx
client/src/components/ui/: button.tsx
client/src/lib/: types.ts
client/src/lib/api/: client.ts  server.ts  sessions.ts
client/src/lib/hooks/: use-lesson.ts
client/src/lib/mock/: lessons.ts
client/src/lib/supabase/: server.ts
docs/: architecture.md
server/: .dockerignore  .env.example  Dockerfile  README.md  config.py  db.py  deps.py  fly.toml  graph.py  lessons.py  logging_config.py  main.py  models.py  pyproject.toml  ratelimit.py  tracing.py
server/agents/: _util.py  curriculum.py  feedback.py  llms.py  memory.py  problem.py  state.py  theory.py
server/evals/: dataset.jsonl  run.py  scorers.py
server/migrations/: 0001_init.sql  run.py
server/prompts/: __init__.py  curriculum.md  feedback.md  memory.md  problem.md  theory.md
server/routers/: me.py  session.py  user.py
server/schemas/: auth.py  session.py  user.py
src/: middleware.ts
src/app/: globals.css  not-found.tsx
src/app/(app)/dashboard/: new-session-input.tsx
src/app/(app)/lesson/[id]/: page.tsx
src/app/(auth)/login/: login-form.tsx
src/app/(auth)/signup/: signup-form.tsx
src/components/: logo.tsx
src/components/dashboard/: filters.tsx  topic-card.tsx  topic-grid.tsx
src/components/lesson/: lesson-complete.tsx  lesson-page.tsx  step-check.tsx  step-feedback.tsx
src/components/shared/: code-block.tsx  numbered-section.tsx
src/lib/mock/: lesson-detail.ts
src/lib/supabase/: server.ts
(+1 files in other folders)
